fixed horizontal and vertical spacing. load masonry properly.

--- a/style.css
+++ b/style.css
@@ -82,14 +82,23 @@ div#footer
 
 /*** GRID ***/
 
+.grid 
+{
+    padding-left: 5%;
+}
+
 .grid-item
 {
     overflow: hidden;
     /** border: 1px solid black; **/
     padding: 0!important;
-    float: left;
+    width: 15%;
 }
 
+.grid-item > img
+{
+    width: 100%;
+}
 
 /*** END GRID **/
 
